<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/age"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="17dp"
        android:onClick="goActivity2"
        android:text="@string/button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:onClick="delete"
        android:text="@string/delete"
        app:layout_constraintEnd_toEndOf="@+id/editText"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="26dp"
        android:text="@string/age2"
        app:layout_constraintStart_toEndOf="@+id/editText"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:onClick="save"
        android:text="@string/save"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <LinearLayout
        android:layout_width="418dp"
        android:layout_height="285dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/btnNext"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDelete">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:gravity="center_horizontal"
            android:text="@string/txt_title"
            android:textColor="#5E35B1"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtName1"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/name_1"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/txtName2"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/name_2"
            android:autofillHints="" />

        <EditText
            android:id="@+id/txtName3"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/name_3"
            android:autofillHints="" />

        <EditText
            android:id="@+id/txtName4"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/name_4"
            android:autofillHints="" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>